--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2018.11.29
 cffi
 chardet==3.0.4
 Click==7.0
-Flask==1.0.2
+Flask
 Flask-Misaka==1.0.0
 Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
